force-app/main/default/objects/HealthCloudGA__EhrEncounter__c/fields/Care_Provider__c.field-meta.xml
<CustomField>
    <fullName>Care_Provider__c</fullName>
    <label>Care Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>