force-app/main/default/objects/HealthCloudGA__EhrEncounter__c/fields/Entered_On__c.field-meta.xml
<CustomField>
    <fullName>Entered_On__c</fullName>
    <label>Entered On</label>
    <type>DateTime</type>
</CustomField>