force-app/main/default/objects/HealthCloudGA__EhrEncounter__c/fields/No_Show__c.field-meta.xml
<CustomField>
    <fullName>No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>